--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DeveloperLand - Het meest leerzame prepark voor het hele gezin!</title>
+  <title>DeveloperLand -- Het meest leerzame prepark voor het hele gezin!</title>
 
   <link rel="stylesheet" href="styles/main.css">
 </head>
